--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,8 @@
     <div class="forms-container">
         <div class="signin-signup">
             <form action="" class="sign-in-form">
-                <h1>Morsa</h1>
+               <!-- Sing In --> 
+                <a href="../index.html"><h1>Morsa</h1></a>
                 <h2 class="title">Sign in</h2>
                 <div class="input-field">
                     <i class="fas fa-user"></i>
@@ -41,7 +42,7 @@
 <!--        Sing Up          -->
             <form action="" class="sign-up-form">
 
-                <h1>Morsa</h1>
+                <a href="../index.html"><h1>Morsa</h1></a>
                 <h2 class="title">Create your free account</h2>
                 <div class="input-field">
                     <i class="fas fa-envelope"></i>
