--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <script src="https://kit.fontawesome.com/afdaaf37ff.js" crossorigin="anonymous"></script>
-
+<link rel="icon" type="image/x-icon" href="./components/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="./styles/style.css" />
 
-    <title>Landing Page</title>
+    <title>Morsa - Landing Page</title>
   </head>
   <body>
     <div class="hero">
@@ -18,9 +18,9 @@
         </div>
 
         <ul>
-          <a href=""><li>Produto</li></a>
-          <a href=""><li>Preços</li></a>
-          <a href=""><li>Dúvidas Frequentes</li></a>
+          <a href="Produto/produto.html"><li>Produto</li></a>
+          <a href="Pricing/pricing.html"><li>Preços</li></a>
+          <a href="FAQ/FAQ.html"><li>Dúvidas Frequentes</li></a>
           <a href="./login/index.html"
             ><li class="login-btn">Já tem uma Conta?</li></a
           >
