--- a/login/index.html
+++ b/login/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -82,7 +82,7 @@
 </div>
 
 
-    <a href="https://storyset.com/business">Business illustrations by Storyset</a>
+<!--     <a href="https://storyset.com/business">Business illustrations by Storyset</a> -->
 
 
     <script src="./index.js"></script>
